erDiagram

    %% =======================
    %% SUPPLIERS
    %% =======================

    SUPPLIER {
        int SupplierID PK
        string SupplierName
        string SupplierCategory
    }

    SUPPLIERDELIVERY {
        int InvoiceID PK
        int SupplierID FK
        string SupplyType
        int Quantity
        date ExpectedDelivery
        date ActualDelivery
    }

    SUPPLIER ||--o{ SUPPLIERDELIVERY : "Supplies"


    %% =======================
    %% DISTRIBUTORS
    %% =======================

    DIST {
        int DistID PK
        string DistName
        string DistPhone
        string DistAddress
        string DistEmail
    }

    DISTORDER {
        int OrderID PK
        int DistID FK
        date OrderDate
    }

    ORDERITEM {
        int OrderItemID PK
        int OrderID FK
        int WineID FK
        int Quantity
    }

    SHIPPINGSERVICE {
        int ShipperID
        string ShipperName
        string ShipperPhone
        string ShipperWeb
    }


    SHIPMENT {
        int ShipmentID PK
        int OrderID FK
        date ShipmentDate
        string TrackingNumber
        int ShippingService FK
    }

    WINETODIST {
        int WD_ID PK
        int WineID FK
        int DistributorID FK
    }

    DIST ||--o{ DISTORDER : "Places"
    DISTORDER ||--o{ ORDERITEM : "Contains"
    ORDERITEM ||--o{ SHIPMENT : "Ships"
    WINE ||--o{ WINETODIST : "Linked"
    DIST ||--o{ WINETODIST : "Linked"
    SHIPMENT ||--o{ SHIPPINGSERVICE : "Shipped By"


    %% =======================
    %% INTERNAL OPERATIONS
    %% =======================

    EMPLOYEE {
        int EmployeeID PK
        string FirstName
        string LastName
        string Role
        int DepartmentID FK
    }

    DEPARTMENT {
        int DeptID PK
        string DeptName
        int ManagerEmployeeID FK
    }

    HOURS {
        int PunchID PK
        int EmployeeID FK
        date DateWorked
        float HoursWorked
    }

    WINE {
        int WineID PK
        string WineName
        string WineType
        int YearProduced
    }

    DEPARTMENT ||--o{ EMPLOYEE : "Employs"
    EMPLOYEE ||--o{ HOURS : "Logs"
